# synapse-womb

./: ARCHITECTURE_PROMETHEUS.md  ARCHITECTURE_ZERO.md  CLAUDE.md  SYNAPSE_ARCHITECTURE.md  SYNAPSE_MASTER_PLAN.md
Probably not relevant/: CLAUDE.md
docs/plans/: 2026-02-05-spore-mirror-experiment-design.md  2026-02-05-spore-mirror-implementation.md  2026-02-06-genetic-hyperparameter-tuner.md  2026-02-06-solana-predator-design.md  ARCHITECTURE_FINAL.md  ARCHITECTURE_SINGULARITY.md  GENETIC_DIGESTION_PIPELINE.md
solana-predator/: Cargo.toml
solana-predator/src/: features.rs  lib.rs  record.rs
solana-predator/src/source/: grpc.rs  mod.rs  websocket.rs
solana-predator/tests/: record_tests.rs
spore-sim/: .gitignore  Cargo.toml
spore-sim/src/: constants.rs  environment.rs  lib.rs  main.rs  simulation.rs  spore.rs  swarm.rs  tuner.rs  utils.rs
spore-sim/tests/: constants_tests.rs  environment_tests.rs  integration_tests.rs  simulation_tests.rs  spore_tests.rs  swarm_tests.rs  tuner_tests.rs  utils_tests.rs
