[package]
name = "solana-predator"
version = "0.1.0"
edition = "2021"

[dependencies]
spore-sim = { path = "../spore-sim" }
tonic = "0.12"
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
bs58 = "0.5"
anyhow = "1"
futures = "0.3"
rand = "0.8"

[[bin]]
name = "sniffer"
path = "src/bin/sniffer.rs"
