[package]
name = "solana-predator"
version = "0.1.0"
edition = "2021"

[features]
default = ["websocket"]
websocket = ["dep:tokio-tungstenite"]
grpc = ["dep:yellowstone-grpc-client", "dep:yellowstone-grpc-proto", "dep:tonic"]

[dependencies]
spore-sim = { path = "../spore-sim" }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive", "env"] }
bs58 = "0.5"
anyhow = "1"
futures = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
reqwest = { version = "0.12", features = ["json"] }

# WebSocket (default)
tokio-tungstenite = { version = "0.24", features = ["native-tls"], optional = true }

# gRPC (optional)
tonic = { version = "0.14", optional = true }
yellowstone-grpc-client = { version = "11", optional = true }
yellowstone-grpc-proto = { version = "11", optional = true }

[[bin]]
name = "sniffer"
path = "src/bin/sniffer.rs"

[[bin]]
name = "reader"
path = "src/bin/reader.rs"

[[bin]]
name = "mockgen"
path = "src/bin/mockgen.rs"

[[bin]]
name = "fetch_history"
path = "src/bin/fetch_history.rs"
